--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db-mysql-sgp1-fyp-eido-do-user-15613131-0.b.db.ondigitalocean.com
 DB_PORT=25060
-DB_DATABASE=defaultdb
+DB_DATABASE=test
 DB_USERNAME=doadmin
 DB_PASSWORD=AVNS_oV0qSthhIUSga05_eE6
 
