--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=UniSaga
-APP_ENV=production
+APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=https://monkfish-app-pozus.ondigitalocean.app/
