--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=UniSaga
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://monkfish-app-pozus.ondigitalocean.app/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db-mysql-sgp1-fyp-eido-do-user-15613131-0.b.db.ondigitalocean.com
-DB_PORT=25060
-DB_DATABASE=test
-DB_USERNAME=doadmin
-DB_PASSWORD=AVNS_oV0qSthhIUSga05_eE6
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
