--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-gd": "*",
+        "aws/aws-sdk-php": "^3.319",
         "bacon/bacon-qr-code": "^3.0",
         "blade-ui-kit/blade-icons": "^1.6",
         "endroid/qr-code": "^5.0",
@@ -17,10 +19,11 @@
         "laravel/jetstream": "^4.3",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.28",
         "livewire/livewire": "^3.5",
         "ryangjchandler/blade-tabler-icons": "^2.3",
-        "twbs/bootstrap": "5.0.2",
-        "ext-gd": "*"
+        "sociallydev/spaces-api": "^3.6",
+        "twbs/bootstrap": "5.0.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
