--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "aws/aws-sdk-php": "^3.319",
         "bacon/bacon-qr-code": "^3.0",
         "blade-ui-kit/blade-icons": "^1.6",
+        "dompdf/dompdf": "^3.0",
         "endroid/qr-code": "^5.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
